# react-template

./: .gitignore  README.md  akdev  cargo-generate.toml  dev.sh  post-message.rhai
.github/workflows/: prepare-template.yml
model/: Cargo.toml
react-app/: package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
react-app/e2e/: chat.spec.ts  multiuser.spec.ts
react-app/scripts/: e2e-with-ports.mjs
react-app/src/: utils.ts
react-app/src/components/: Chat.tsx  ChatDebugHeader.tsx  MessageInput.tsx
server/: Cargo.toml
server/src/: main.rs
wasm-bindings/: Cargo.toml
wasm-bindings/src/: lib.rs
