[package]
name = "ankurah-template-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ankurah = { version = "=0.9.0" }
ankurah-websocket-server = { version = "=0.9.0" }
ankurah-storage-sled = { version = "=0.9.0", optional = true }
ankurah-storage-postgres = { version = "=0.9.0", optional = true }
ankurah-template-model = { path = "../model" }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.38", features = ["rt-multi-thread"] }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
serde_json = "1.0"

[features]
# Storage engine for the durable (server) node. `cargo generate` sets `default`
# to your choice (Sled or Postgres); dev.sh reads it back to decide whether to
# bring up a Postgres container. Change the default here to switch engines.
default = ["sled"]
sled = ["dep:ankurah-storage-sled"]
postgres = ["dep:ankurah-storage-postgres"]
