[package]
name = "ankurah-template-wasm-bindings"
version = "0.6.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = []

[dependencies]
ankurah = { version = "=0.8.1", features = ["derive", "wasm"] }
ankurah-signals = { version = "=0.8.1", features = ["wasm", "react", "jsvalue"] }
ankurah-websocket-client-wasm = { version = "=0.8.1" }
ankurah-storage-indexeddb-wasm = { version = "=0.8.1" }
ankurah-template-model = { path = "../model", features = ["wasm"] }

# Virtual scroll for pagination
ankurah-virtual-scroll = { version = "0.8.0", features = ["wasm"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3", features = ["Window", "Location"] }
wasm-logger = "0.2.0"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"

send_wrapper = { version = "0.6.0" }
tokio = { version = "1.39.0", features = ["sync"] }
lazy_static = "1.4.0"
once_cell = "1.19.0"
##### patch - something is wrong with the uuid crate for wasm
getrandom = { version = "0.3", features = ["wasm_js"] }
######

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
